# pretext-rn

./: .gitattributes  .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pretext-rn.podspec  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: android-legacy-parity.yml  ci.yml  npm-publish.yml
android/: build.gradle
android/src/main/jni/: CMakeLists.txt  PretextInstallJNI.cpp  PretextTextMeasureAndroid.cpp
cpp/: PretextInstall.cpp  PretextInstall.h  PretextPlatformMeasure.h  PretextTypes.h
docs/: installation.md
example/HostApp/: package-lock.json  package.json
example/HostApp/ios/HostApp.xcodeproj/: project.pbxproj
example/HostAppLegacy/: App.tsx  app.json  package-lock.json  package.json  react-native.config.js
example/HostAppLegacy/android/: link-assets-manifest.json  settings.gradle
example/HostAppLegacy/ios/: Podfile
example/HostAppLegacy/scripts/: assert-android-parity.mjs  assert-ios-parity.mjs
ios/: PretextMeasureInstaller.mm  PretextMeasureModule.mm  PretextTextMeasure.mm
scripts/: android-legacy-parity.sh  ios-legacy-parity.sh
src/: NativePretext.ts  index.ts  measureHeight.ts  types.ts
src/cache/: cache.ts  lruCache.ts  measurementCache.ts
src/future/: layout.ts  prepare.ts
src/runtime/: fallback.ts  jsiRuntime.ts
tests/: cache-key.test.ts  configure-measure.test.ts  integration-repeatability.test.ts  lru-cache.test.ts  measure-cache.test.ts  setup.ts  uncertainty-verification.test.ts
tests/mocks/: react-native.ts
(+17 files in other folders)
